<resources>
    <string name="app_name">Flagship QA</string>
    <string name="title_config">Config</string>
    <string name="title_visitor">Visitor</string>
    <string name="title_context">Context</string>
    <string name="title_modifications">Modifications</string>
    <string name="title_events">Hits</string>

    <string name="fragment_config_title">Configuration</string>
    <string name="fragment_config_env_id">Env id :</string>
    <string name="fragment_config_api_key">Api key :</string>
    <string name="fragment_config_mode">Mode :</string>
    <string name="fragment_config_bucketing">Bucketing</string>
    <string name="fragment_config_api">Api</string>
    <string name="fragment_config_authenticated_false">false</string>
    <string name="fragment_config_authenticated_true">true</string>
    <string name="fragment_config_timeout">Timeout :</string>
    <string name="fragment_config_polling">Polling interval :</string>
    <string name="fragment_config_start">Start</string>
    <string name="fragment_config_visitor_id">Visitor id :</string>
    <string name="fragment_config_visitor_authenticated">Authenticated :</string>
    <string name="fragment_config_visitor_context">Visitor context :</string>
    <string name="fragment_config_error_env_id">Env id shouldn\'t be empty.</string>
    <string name="fragment_config_error_api_key">Api key shouldn\'t be empty.</string>
    <string name="fragment_config_error_started">An error occurred while starting Flagship.</string>
    <string name="fragment_config_error_timeout">Timeout should be > 0.</string>
    <string name="fragment_config_error_json">Json is not valid.</string>
    <string-array name="polling_array">
        <item>MS</item>
        <item>S</item>
        <item>M</item>
        <item>H</item>
        <item>D</item>
    </string-array>

    <string name="fragment_visitor_title">Visitor</string>
    <string name="fragment_visitor_id">Visitor id :</string>
    <string name="fragment_visitor_anonymous_id">Anonymous id :</string>
    <string name="fragment_visitor_authenticate">Authenticate</string>
    <string name="fragment_visitor_authenticate_hint">New authenticated id</string>
    <string name="fragment_visitor_unauthenticate">Unauthenticate</string>
    <string name="fragment_visitor_authenticated_id_empty">Error : new authenticated id can\'t be empty.</string>
    <string name="fragment_visitor_authenticated_sync_done">Sync done</string>
    <string name="fragment_visitor_consent">Has consented : </string>

    <string name="fragment_context_title">Visitor Context</string>
    <string name="fragment_context_update">Synchronize</string>
    <string name="fragment_context_error">Json is not valid.</string>
    <string name="fragment_context_success">Success</string>

    <string name="fragment_modifications_title">Modifications</string>
    <string name="fragment_modifications_view_json">Json view</string>
    <string name="fragment_modifications_view_compute">Compute view</string>
    <string name="fragment_modifications_key">Key</string>
    <string name="fragment_modifications_default">Default value</string>
    <string name="fragment_modifications__info_default"></string>
    <string name="fragment_modifications_info">Modification info: </string>
    <string name="fragment_modifications_variation_group">Variation group id: </string>
    <string name="fragment_modifications_variation">Variation id: </string>
    <string name="fragment_modifications_activate">Activate</string>
    <string name="fragment_modifications_key_missing">Key not found.</string>
    <string name="fragment_modifications_value">Value :</string>
    <string name="fragment_modifications_get">get</string>

    <string name="fragment_hit_title">Hits</string>
    <string name="fragment_hit_page">Screen</string>
    <string name="fragment_hit_item">Item</string>
    <string name="fragment_hit_transaction">Transaction</string>
    <string name="fragment_hit_event">Event</string>
    <string name="fragment_hit_page_title">Hit Screen:</string>
    <string name="fragment_hit_item_title">Hit Item:</string>
    <string name="fragment_hit_transaction_title">Hit Transaction: </string>
    <string name="fragment_hit_event_title">Hit Event: </string>


    <string name="fragment_hit_interface">Interface</string>
    <string name="fragment_hit_transaction_id">Transaction id</string>
    <string name="fragment_hit_affiliation">Affiliation</string>
    <string name="fragment_hit_item_sku">Sku</string>
    <string name="fragment_hit_item_name">Name</string>
    <string name="fragment_hit_user_engagement">User engagement</string>
    <string name="fragment_hit_user_action">Action Tracking</string>
    <string name="fragment_hit_event_action">Event action</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id
        interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales
        nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
        himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet,
        imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a
        condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut
        sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros
        porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl
        nec dolor bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at,
        mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt
        nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id.
        Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse
        sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor
        sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor
        varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris.
        Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non
        viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat
        diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
        egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer
        dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec
        maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce
        dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="next_activity">Next activity</string>
    <string name="title_activity_main3">MainActivity3</string>


</resources>