<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_config"
        android:icon="@drawable/ic_baseline_settings"
        android:title="@string/title_config" />

    <item
        android:id="@+id/navigation_visitor"
        android:icon="@drawable/ic_baseline_visitor"
        android:title="@string/title_visitor" />

    <item
        android:id="@+id/navigation_context"
        android:icon="@drawable/ic_baseline_context"
        android:title="@string/title_context" />

    <item
        android:id="@+id/navigation_modifications"
        android:icon="@drawable/ic_baseline_modification"
        android:title="@string/title_modifications" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_baseline_events"
        android:title="@string/title_events" />
</menu>