<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    tools:context=".ui.dashboard.ConfigFragment">

    <com.abtasty.flagshipqa.utils.LatoRegularTextView
        android:id="@+id/text_visitor_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/fragment_visitor_id"
        android:textAlignment="center"
        android:textColor="@color/primary_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/main_title"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <EditText
        android:id="@+id/edit_text_visitor_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gradient_start"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:textColor="@color/primary_white"
        android:textColorHint="@color/primary_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_visitor_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_visitor_id" />

    <com.abtasty.flagshipqa.utils.LatoRegularTextView
        android:id="@+id/text_anonymous_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/fragment_visitor_anonymous_id"
        android:textAlignment="center"
        android:textColor="@color/primary_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/main_title"
        app:layout_constraintTop_toBottomOf="@+id/text_visitor_id" />

    <EditText
        android:id="@+id/edit_text_anonymous_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gradient_start"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:textColor="@color/primary_white"
        android:textColorHint="@color/primary_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_anonymous_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_anonymous_id" />

    <com.abtasty.flagshipqa.utils.LatoRegularTextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_visitor_title"
        android:textColor="@color/primary_white"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edit_text_authenticate_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/gradient_start"
        android:ems="10"
        android:hint="@string/fragment_visitor_authenticate_hint"
        android:inputType="textPersonName"
        android:textColor="@color/primary_white"
        android:textColorHint="@color/primary_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/authenticate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/authenticate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_gradient"
        android:text="@string/fragment_visitor_authenticate"
        android:textColor="@color/primary_white"
        app:layout_constraintBottom_toTopOf="@id/unauthenticate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/unauthenticate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_gradient"
        android:text="@string/fragment_visitor_unauthenticate"
        android:textColor="@color/primary_white"
        app:layout_constraintBottom_toTopOf="@id/fragement_visitor_synchronize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragement_visitor_synchronize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_gradient"
        android:text="@string/fragment_context_update"
        android:textColor="@color/primary_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>