<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp"
    tools:context=".ui.dashboard.ConfigFragment">

    <com.abtasty.flagshipqa.utils.LatoRegularTextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_hit_title"
        android:textColor="@color/primary_white"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_grey">


            <com.abtasty.flagshipqa.utils.LatoRegularTextView
                android:id="@+id/text_title_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/fragment_hit_page_title"
                android:textColor="@color/primary_white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_interface"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gradient_start"
                android:ems="10"
                android:hint="@string/fragment_hit_interface"
                android:inputType="textPersonName"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/primary_white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title_page"
                app:layout_constraintWidth_percent="0.92" />

            <Button
                android:id="@+id/button_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_gradient"
                android:text="@string/fragment_hit_page"
                android:textColor="@color/primary_white"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_interface" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_page">

            </FrameLayout>

            <com.abtasty.flagshipqa.utils.LatoRegularTextView
                android:id="@+id/text_event_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:text="@string/fragment_hit_event_title"
                android:textColor="@color/primary_white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_event"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gradient_start"
                app:layout_constraintEnd_toEndOf="@id/edit_text_interface"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/text_event_title" />

            <EditText
                android:id="@+id/edit_text_event_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gradient_start"
                android:ems="10"
                android:hint="@string/fragment_hit_event_action"
                android:inputType="textPersonName"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/primary_white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/spinner_event" />

            <Button
                android:id="@+id/button_event"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_gradient"
                android:text="@string/fragment_hit_event"
                android:textColor="@color/primary_white"
                app:layout_constraintEnd_toEndOf="@+id/button_page"
                app:layout_constraintStart_toStartOf="@+id/button_page"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_event_action" />

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_event">

            </FrameLayout>


            <com.abtasty.flagshipqa.utils.LatoRegularTextView
                android:id="@+id/text_transaction_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:text="@string/fragment_hit_transaction_title"
                android:textColor="@color/primary_white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

            <EditText
                android:id="@+id/edit_text_transaction_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gradient_start"
                android:ems="10"
                android:hint="@string/fragment_hit_transaction_id"
                android:inputType="textPersonName"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/primary_white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/text_transaction_title" />

            <EditText
                android:id="@+id/edit_text_affiliation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gradient_start"
                android:ems="10"
                android:hint="@string/fragment_hit_affiliation"
                android:inputType="textPersonName"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/primary_white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_transaction_id" />


            <Button
                android:id="@+id/button_transaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_gradient"
                android:text="@string/fragment_hit_transaction"
                android:textColor="@color/primary_white"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_affiliation" />

            <FrameLayout
                android:id="@+id/frameLayout3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_transaction" />


            <com.abtasty.flagshipqa.utils.LatoRegularTextView
                android:id="@+id/text_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:text="@string/fragment_hit_item_title"
                android:textColor="@color/primary_white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

            <EditText
                android:id="@+id/edit_text_item_transaction_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gradient_start"
                android:ems="10"
                android:hint="@string/fragment_hit_transaction_id"
                android:inputType="textPersonName"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/primary_white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/text_item_title" />

            <EditText
                android:id="@+id/edit_text_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gradient_start"
                android:ems="10"
                android:hint="@string/fragment_hit_item_name"
                android:inputType="textPersonName"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/primary_white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_item_transaction_id" />

            <EditText
                android:id="@+id/edit_text_product_sku"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gradient_start"
                android:ems="10"
                android:hint="@string/fragment_hit_item_sku"
                android:inputType="textPersonName"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/primary_white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_product_name" />


            <Button
                android:id="@+id/button_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_gradient"
                android:text="@string/fragment_hit_item"
                android:textColor="@color/primary_white"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_interface"
                app:layout_constraintStart_toStartOf="@+id/edit_text_interface"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_product_sku" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
